fix(ci/cd): Eliminate error masking in CI/CD workflows
**Issues Fixed:**

1. ci.yml - Removed continue-on-error from coverage pipeline
   - Coverage generation failures were being silently ignored
   - Now fails loudly with explicit error message
   - Added proper error handling with exit 1

2. docker-build.yml - Added Docker image verification
   - Replaced useless echo with actual digest verification
   - Now checks that image digest exists after build
   - Fails CI if push fails to generate digest

3. ios-tests.yml - Fixed simulator boot error handling
   - Removed || true that masked simulator boot failures
   - Now explicitly checks simulator is online after boot
   - Provides detailed diagnostics on failure

4. ios-tests.yml - Replaced bc with portable awk arithmetic
   - Removed dependency on bc command (not always available)
   - Uses awk for coverage percentage comparison
   - Added validation that coverage value exists

5. ios-tests.yml - Improved build warning detection
   - Better grep error handling
   - Shows first 10 warnings when threshold exceeded
   - Clear success/failure messages

**Philosophy:**
Failures should be loud, clear, and actionable. Masking errors with
continue-on-error makes debugging impossible. Better to catch issues
early than ship broken pipelines.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,15 +74,18 @@ jobs:
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/nova_auth_test
         REDIS_URL: redis://localhost:6379
-      run: cargo tarpaulin --out Xml --timeout 300 --verbose
-      continue-on-error: true
+      run: |
+        cargo tarpaulin --out Xml --timeout 300 --verbose || {
+          echo "❌ Coverage generation failed"
+          exit 1
+        }
 
     - name: Upload coverage to Codecov
+      if: always()
       uses: codecov/codecov-action@v3
       with:
         files: ./cobertura.xml
         fail_ci_if_error: false
-      continue-on-error: true
 
   lint:
     name: Lint & Format
