feat(backend): Add comprehensive database migrations and test suite
**Database Improvements:**
- Add social graph schema (004_social_graph_schema.sql)
- Add deleted_at timestamp support (005_add_deleted_at_to_users.sql)
- Add two-factor authentication tables (006_add_two_factor_auth.sql)
- Add JWT key rotation support (010_jwt_key_rotation.sql)
- Add video/reels support (011_videos_table.sql)

**Test Coverage:**
- Add comprehensive 2FA tests (2fa_test.rs)
- Add OAuth integration tests (oauth_test.rs)
- Add feed ranking tests (feed_ranking_test.rs)
- Add job worker tests (job_test.rs)
- Add security audit tests (security_test.rs)
- Add performance benchmarks (load_test.rs)
- Add test coverage summary

**Configuration Updates:**
- Update backend dependencies and workspace configuration
- Update Dockerfile with production build optimizations
- Update docker-compose for multi-service orchestration

**Cleanup:**
- Remove obsolete Specify workflow artifacts
- Clean up old auth specification documents

This commit consolidates all Phase 3 implementation work including
advanced features like social graphs, video support, and comprehensive
testing infrastructure.

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -47,6 +47,10 @@ anyhow = "1.0"
 argon2 = "0.5"
 jsonwebtoken = "9.2"
 rand = "0.8"
+rsa = { version = "0.9", features = ["sha2"] }
+aes-gcm = "0.10"
+hmac = "0.12"
+qrcode = "0.12"
 
 # Validation
 validator = { version = "0.18", features = ["derive"] }
@@ -65,11 +69,26 @@ aws-config = "1.1"
 aws-sdk-s3 = "1.13"
 
 # Hashing and encoding
+sha1 = "0.10"
 sha2 = "0.10"
 hex = "0.4"
 
 # MIME type detection
 mime = "0.3"
+
+# Encoding
+base64 = "0.21"
+
+# Async traits
+async-trait = "0.1"
+
+# HTTP client for OAuth
+reqwest = { version = "0.12", features = ["json"] }
+urlencoding = "2.1"
+
+# ClickHouse client
+clickhouse = { version = "0.12" }
+rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
 
 [profile.release]
 opt-level = 3
