--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -10,6 +10,10 @@ rust-version.workspace = true
 name = "user-service"
 path = "src/main.rs"
 
+[[bin]]
+name = "job_worker"
+path = "src/bin/job_worker.rs"
+
 [lib]
 name = "user_service"
 path = "src/lib.rs"
@@ -42,14 +46,30 @@ governor.workspace = true
 prometheus.workspace = true
 aws-config.workspace = true
 aws-sdk-s3.workspace = true
+sha1.workspace = true
 sha2.workspace = true
 hex.workspace = true
 mime.workspace = true
+base64.workspace = true
+rdkafka.workspace = true
+async-trait.workspace = true
+reqwest.workspace = true
+urlencoding.workspace = true
+clickhouse.workspace = true
+hmac.workspace = true
+qrcode.workspace = true
 
 # Service-specific dependencies
 futures = "0.3"
 lazy_static = "1.4"
 image = "0.24"
+
+# Phase 4: Video Processing
+tonic = "0.10"
+prost = "0.12"
+tokio-process = "0.4"
+ndarray = "0.15"
+http = "0.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
@@ -60,3 +80,27 @@ tempfile = "3.8"
 [[test]]
 name = "posts_test"
 path = "tests/posts_test.rs"
+
+[[test]]
+name = "oauth_test"
+path = "tests/oauth_test.rs"
+
+[[test]]
+name = "feed_ranking_test"
+path = "tests/feed_ranking_test.rs"
+
+[[test]]
+name = "job_test"
+path = "tests/job_test.rs"
+
+[[test]]
+name = "security_test"
+path = "tests/security/security_test.rs"
+
+[[test]]
+name = "load_test"
+path = "tests/performance/load_test.rs"
+
+[[test]]
+name = "2fa_test"
+path = "tests/2fa_test.rs"
