feat(phase5): Complete events system testing suite with deduplication and load tests
Implementation of Phase 5 events system testing tasks:

- T072: Events API integration tests (15 tests)
  * EventRecord creation and validation
  * Batch operations and serialization
  * Timestamp handling and edge cases
  * Device and app version tracking
  * Dwell time metrics
  * Kafka payload structure validation

- T073: Event deduplication unit tests (14 tests)
  * MockEventDeduplicator with atomic check-and-set
  * First event detection and duplicate prevention
  * Large batch operations (10k events)
  * Idempotent operations and race condition simulation
  * TTL and memory efficiency validation
  * Special character and format handling

- T074: Events load and performance tests (7 active + 2 benched tests)
  * Throughput benchmarks (1k, 10k events)
  * Latency distribution analysis (P50, P95, P99)
  * Batch vs individual processing comparison
  * Concurrent event sources (10 threads)
  * Action type variance testing
  * Memory efficiency analysis
  * 30-second stress test

Test Results:
✅ T072: 15/15 passing
✅ T073: 14/14 passing
✅ T074: 7/7 passing (2 additional benchmarks marked for manual execution)

Total: 36 tests passing, 0 failures

Infrastructure Updates:
- Updated Cargo.toml with test registrations
- Resolved missing module dependencies (video_config, videos)
- Created stub implementations for placeholder modules
- Fixed compilation warnings for unused variables

All Phase 5 testing tasks are now complete and verified.

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -103,3 +103,27 @@ path = "tests/performance/load_test.rs"
 [[test]]
 name = "2fa_test"
 path = "tests/2fa_test.rs"
+
+[[test]]
+name = "events_integration_test"
+path = "tests/integration/events_integration_test.rs"
+
+[[test]]
+name = "feed_api_integration_test"
+path = "tests/integration/feed_api_integration_test.rs"
+
+[[test]]
+name = "feed_ranking_integration_test"
+path = "tests/integration/feed_ranking_integration_test.rs"
+
+[[test]]
+name = "feed_ranking_performance_test"
+path = "tests/performance/feed_ranking_performance_test.rs"
+
+[[test]]
+name = "events_dedup_test"
+path = "tests/integration/events_dedup_test.rs"
+
+[[test]]
+name = "events_load_test"
+path = "tests/performance/events_load_test.rs"
