feat(phase5-phase6): Add advanced event tests and Phase 6 testing framework
Phase 5 Enhancements:
- Created events_advanced_test.rs with 12 comprehensive test cases
- Tests cover: batch aggregation, temporal ordering, multi-user scenarios
- Advanced scenarios: deduplication, device filtering, enrichment
- Statistical analysis and correlation testing
- Serialization round-trip verification
- 69 total tests passing across all event and feed ranking suites

Phase 6 Preparation:
- Created PHASE6_TEST_FRAMEWORK.md with complete testing roadmap
- Established test directory structure for video system (T131-T156)
- Defined test templates for: unit, integration, performance, load, chaos
- Documented quality gates (G1-G8) for production deployment
- Planned 9 documentation deliverables (T147-T151)
- Organized 26 test tasks across 5 test categories

Test Results Summary:
✅ events_integration_test: 15/15
✅ events_dedup_test: 14/14
✅ events_advanced_test: 12/12 (NEW)
✅ events_load_test: 7/7 + 2 benches
✅ feed_ranking_test: 12/12
✅ feed_ranking_integration_test: 9/9

Total: 69 tests passing, 0 failures, 100% pass rate

Framework Ready for:
- T131-T133: Video metadata, ranking, embedding unit tests
- T134-T137: Video E2E, ranking, streaming integration tests
- T138-T141: Latency, throughput, inference performance tests
- T142-T143: Feed API and event ingestion load tests
- T144-T146: CDN, model, and Milvus chaos tests

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -125,5 +125,9 @@ name = "events_dedup_test"
 path = "tests/integration/events_dedup_test.rs"
 
 [[test]]
+name = "events_advanced_test"
+path = "tests/integration/events_advanced_test.rs"
+
+[[test]]
 name = "events_load_test"
 path = "tests/performance/events_load_test.rs"
