feat(phase6): Implement Phase 6 unit tests for video system (T131-T133)
Phase 6 Unit Tests Implementation:

T131: Video Metadata Validation Tests (28 tests)
- File size validation (minimum, maximum, boundary conditions)
- Codec validation (h264, h265, vp9, av1)
- Resolution validation (1080p, 720p, 480p, 360p)
- Frame rate validation (0-120 fps)
- MIME type validation (mp4, webm, quicktime)
- Complete metadata validation
- Codec extraction from filename

Test Coverage:
✅ Valid metadata scenarios
✅ Invalid codec/resolution/frame rate/MIME errors
✅ Edge cases (minimum/maximum file sizes)
✅ All supported formats

T132: Video Ranking Algorithm Tests (23 tests)
- View score calculation with logarithmic scaling
- Engagement score (likes, comments, shares weighted)
- Recency score with exponential decay
- Quality score with rating and flag penalties
- Combined ranking score normalization
- Weight configuration testing

Test Coverage:
✅ Individual score calculations
✅ Score normalization bounds [0, 1]
✅ Weighted combination logic
✅ Stability and consistency
✅ Custom weight configurations

T133: Embedding Similarity Tests (23 tests)
- Euclidean distance calculation
- Cosine similarity (normalized)
- Manhattan distance (L1)
- Chebyshev distance (L∞)
- Vector normalization to unit length
- Top-K similar embedding retrieval

Test Coverage:
✅ Distance metrics properties (symmetry, triangle inequality)
✅ Normalization preservation
✅ High-dimensional embeddings (256-dim)
✅ Sparse embedding handling
✅ Clustering similarity

Total Test Results:
═════════════════════════════════════════════
Phase 5 (Events System): 69 tests ✅
Phase 3 (Feed Ranking): 38 tests ✅
Phase 6 (Video Unit Tests): 74 tests ✅
─────────────────────────────────────────────
TOTAL: 181 tests passing | 100% pass rate
═════════════════════════════════════════════

Test Execution Performance:
- video_metadata_tests: 0.00s
- video_ranking_tests: 0.00s
- embedding_tests: 0.00s
- Total Phase 6: 0.00s

Compilation Status:

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -131,3 +131,16 @@ path = "tests/integration/events_advanced_test.rs"
 [[test]]
 name = "events_load_test"
 path = "tests/performance/events_load_test.rs"
+
+# Phase 6: Video System Unit Tests (T131-T133)
+[[test]]
+name = "video_metadata_tests"
+path = "tests/unit/video/video_metadata_tests.rs"
+
+[[test]]
+name = "video_ranking_tests"
+path = "tests/unit/video/video_ranking_tests.rs"
+
+[[test]]
+name = "embedding_tests"
+path = "tests/unit/video/embedding_tests.rs"
