test(phase6): implement T134-T137 integration tests for video system
Phase 6: Video System Integration Tests - 39 comprehensive integration tests

T134: Upload → Transcoding → Feed E2E (11 tests)
  - End-to-end video workflow from upload to feed appearance
  - VideoE2EService mock with Arc<Mutex<>> for state management
  - Status progression: Uploading → Processing → Published
  - Feed visibility SLA validation (10-second requirement)
  - Video upload with metadata validation
  - Feed ordering (LIFO - newest first)
  - Duplicate prevention in feed
  - Support for multiple codecs (h264, h265, vp9)
  - Creator perspective testing
  - Timestamp updates during processing
  - Large file handling (100MB-500MB)

T135: Deep Model Video Ranking with Milvus (11 tests)
  - Mock Milvus vector database implementation
  - 256-dimensional embedding generation
  - Similarity scoring with cosine distance
  - Integration of deep learning model with engagement metrics
  - Ranking formula: combined_score = (similarity * model_weight) + (engagement * engagement_weight)
  - Embedding properties validation (bounds, dimensionality)
  - Weight impact analysis on final ranking
  - Search result ordering and limits
  - Ranking stability and consistency verification
  - Score normalization [0, 1] validation

T136: Streaming Manifest Generation (8 tests)
  - HLS (.m3u8) playlist generation with adaptive bitrates
  - DASH (.mpd XML) generation with multiple representations
  - Support for 5 bitrate tiers: 500, 1000, 2500, 5000, 10000 kbps
  - Support for 4 resolutions: 360p, 480p, 720p, 1080p
  - Segment generation for streaming protocols
  - Codec support (h264, h265)
  - Duration and playback metadata validation

T137: Engagement Event Tracking (9 tests)
  - Event accumulation for likes, comments, shares, views
  - Watch milestone tracking (start → 25% → 50% → 75% → complete)
  - Completion rate calculation (WatchComplete / WatchStart)
  - Event history retrieval and ordering
  - Timestamp pre

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -144,3 +144,16 @@ path = "tests/unit/video/video_ranking_tests.rs"
 [[test]]
 name = "embedding_tests"
 path = "tests/unit/video/embedding_tests.rs"
+
+# Phase 6: Video System Integration Tests (T134-T137)
+[[test]]
+name = "video_e2e_tests"
+path = "tests/integration/video/video_e2e_tests.rs"
+
+[[test]]
+name = "video_ranking_integration_tests"
+path = "tests/integration/video/video_ranking_integration_tests.rs"
+
+[[test]]
+name = "video_streaming_engagement_tests"
+path = "tests/integration/video/video_streaming_engagement_tests.rs"
