test(phase6): implement T138-T141 performance tests for video system
Phase 6: Video System Performance Tests - 39 comprehensive tests

T138: Video Ranking Latency (8 tests)
  - Cached ranking lookup < 1ms
  - Fresh/cold ranking < 800ms
  - Batch computation efficiency
  - Latency consistency validation
  - Cache warming with 1000 videos
  - P95 latency < 300ms (cached) SLA compliance
  - Component-level latency breakdown

T139: Video Transcoding Throughput (9 tests)
  - Baseline throughput validation
  - File size tier analysis (small/medium/large)
  - 99.9 percentile SLA compliance (5-minute target)
  - High load scenarios (1.2x processing factor)
  - Codec comparison (h264/h265/vp9)
  - Queue simulation (500 jobs)
  - Percentile distribution analysis
  - Min throughput requirement (1 video/min baseline)

T140: Deep Learning Model Inference (12 tests)
  - Single inference P95 < 200ms SLA
  - Batch inference efficiency
  - Embedding quality validation
  - Concurrent request handling (200 parallel)
  - Cache efficiency analysis
  - Embedding dimension validation (256-dim)
  - Latency consistency (< 50x variance for mock)
  - Scale testing (10-1000 inferences)
  - Percentile distribution
  - SLA compliance validation
  - Tail latency analysis (P99.9)

T141: Video Bitrate Switching (11 tests)
  - Basic bitrate switch latency < 500ms
  - Upward quality scaling
  - Downward quality adaptation
  - No-stall buffer management
  - Network degradation scenario
  - Recommendation algorithm validation
  - Burst request handling (rapid switches)
  - Switch consistency analysis
  - Percentile distribution
  - Buffer management calculations
  - SLA compliance (1000 switches)

All 39 performance tests passing (0 failures)
Combined with 113 unit/integration tests, Phase 6 now has 152 tests total

Performance characteristics validated:
  - T138: Cached P95 < 1ms, Fresh P95 < 800ms
  - T139: 99.9% within 5-minute SLA
  - T140: P95 < 200ms for inference
  - T141: P95 <= 500ms for bitra

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -157,3 +157,20 @@ path = "tests/integration/video/video_ranking_integration_tests.rs"
 [[test]]
 name = "video_streaming_engagement_tests"
 path = "tests/integration/video/video_streaming_engagement_tests.rs"
+
+# Phase 6: Video System Performance Tests (T138-T141)
+[[test]]
+name = "video_ranking_latency_test"
+path = "tests/performance/video/video_ranking_latency_test.rs"
+
+[[test]]
+name = "video_transcoding_throughput_test"
+path = "tests/performance/video/video_transcoding_throughput_test.rs"
+
+[[test]]
+name = "video_model_inference_test"
+path = "tests/performance/video/video_model_inference_test.rs"
+
+[[test]]
+name = "video_bitrate_switching_test"
+path = "tests/performance/video/video_bitrate_switching_test.rs"
