feat(Phase 6): Implement video system load tests (T142-T143)
- T142: Video Feed API Load Tests (8 tests)
  * Tests API scaling from 100 → 1000 concurrent users
  * Validates throughput, latency, and error handling under load
  * Tests: baseline load, 500/1000 user load, scaling analysis, error handling, response distribution, concurrent patterns, sustained load
  * Key metrics: throughput (req/sec), P95/P99 latency, error rate

- T143: Video Event Ingestion Load Tests (9 tests)
  * Tests event queue processing at 1M+ events/hour scale
  * Validates queue management, backpressure handling, and latency
  * Tests: baseline 1k events/sec, high throughput 5k events/sec, 1M/hour sustainability, backpressure, queue management, latency consistency, sustained 60s, failure resilience, throughput stability
  * Key metrics: events/sec, queue depth, latency percentiles (P95/P99), drop rate

All 17 load tests passing with realistic mock implementations and SLA validation.

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -103,3 +103,12 @@ path = "tests/performance/load_test.rs"
 [[test]]
 name = "2fa_test"
 path = "tests/2fa_test.rs"
+
+# Phase 6: Video System Load Tests (T142-T143)
+[[test]]
+name = "video_feed_api_load_test"
+path = "tests/load/video/video_feed_api_load_test.rs"
+
+[[test]]
+name = "video_event_ingestion_load_test"
+path = "tests/load/video/video_event_ingestion_load_test.rs"
