--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,5 +1,12 @@
 [workspace]
-members = ["user-service"]
+members = [
+    "user-service",
+    "crates/streaming-core",
+    "crates/streaming-ingest",
+    "crates/streaming-transcode",
+    "crates/streaming-delivery",
+    "crates/streaming-api"
+]
 resolver = "2"
 
 [workspace.package]
@@ -81,6 +88,15 @@ base64 = "0.21"
 
 # Async traits
 async-trait = "0.1"
+
+# Streaming-specific dependencies
+futures = "0.3"
+bytes = "1.5"
+nom = "7.1"
+rmp-serde = "1.1"
+avro-rs = "0.13"
+ffmpeg-sidecar = "1.1"
+actix-ws = "0.2"
 
 # HTTP client for OAuth
 reqwest = { version = "0.12", features = ["json"] }
