--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -63,6 +63,7 @@ qrcode.workspace = true
 futures = "0.3"
 lazy_static = "1.4"
 image = "0.24"
+num_cpus = "1.16"
 
 # Phase 4: Video Processing
 tonic = "0.10"
