feat(backend,ios): optimize local docker setup and enhance authentication
- Backend: Make migrations optional for dev environments
- Backend: Make S3 client optional for local development
- Backend: Improve event consumer error handling
- iOS: Standardize API endpoints and add Crypto utility
- iOS: Enhance authentication repository with base64 JWT handling
- Docker: Update docker-compose configuration for local development
- Config: Add dev_up.sh script for easy environment setup

--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -59,6 +59,7 @@ urlencoding.workspace = true
 clickhouse.workspace = true
 hmac.workspace = true
 qrcode.workspace = true
+rsa.workspace = true
 
 # Service-specific dependencies
 futures = "0.3"
