--- a/ios/NovaSocialApp/NovaSocialApp/Info.plist
+++ b/ios/NovaSocialApp/NovaSocialApp/Info.plist
@@ -29,5 +29,28 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<!-- iOS API Base URL 覆盖（可在真机调试时改为 http://<你的电脑IP>:8085） -->
+	<key>API_BASE_URL</key>
+	<string>http://localhost:8085</string>
+	<!-- 开发环境 ATS 例外，允许 HTTP 本地调试（建议仅用于 DEBUG） -->
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
+			<dict>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key>
+				<string>TLSv1.0</string>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
