--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -188,7 +188,7 @@ services:
     restart: unless-stopped
     environment:
       # Application
-      APP_ENV: development
+      APP_ENV: production
       APP_HOST: 0.0.0.0
       APP_PORT: 8080
       RUST_LOG: debug
@@ -215,6 +215,12 @@ services:
       JWT_SECRET: ${JWT_SECRET:-dev_secret_change_in_production_32chars}
       JWT_ACCESS_TOKEN_TTL: 900
       JWT_REFRESH_TOKEN_TTL: 604800
+      # RSA keys for JWT (base64-encoded PEM content)
+      JWT_PRIVATE_KEY_PEM: ${JWT_PRIVATE_KEY_PEM}
+      JWT_PUBLIC_KEY_PEM: ${JWT_PUBLIC_KEY_PEM}
+
+      # Feature flags
+      DISABLE_S3: ${DISABLE_S3:-true}
 
       # Email (mock for development)
       SMTP_HOST: ${SMTP_HOST:-mailhog}
@@ -228,6 +234,8 @@ services:
       RATE_LIMIT_WINDOW_SECS: 60
     ports:
       - "${USER_SERVICE_PORT:-8080}:8080"
+    volumes:
+      - ./backend/keys:/etc/nova/jwt:ro
     depends_on:
       postgres:
         condition: service_healthy
