refactor(backend): eliminate feed ranking service duplication - Priority 2a
Removed two redundant FeedRankingService implementations:
- feed_service.rs (523 lines) - marked as DEPRECATED, never used
- feed_ranking_service.rs (474 lines) - commented out Phase 2, never used

Consolidation strategy (Linus principle: eliminate special cases):
- Kept feed_ranking.rs (888 lines) as single source of truth
- All ranking functionality unified in one place
- ClickHouse queries, circuit breaker, caching, deduplication all centralized

Code reduction: ~1,000 lines of duplicated ranking logic eliminated
Compilation: ✅ All tests pass, zero breaking changes

Updated services/mod.rs documentation to reflect new structure.

Technical rationale:
Three implementations had near-identical scoring algorithms:
- exp(-λ * timeDifference) for freshness decay
- log1p((likes + 2*comments + 3*shares) / exposures) for engagement
- Saturation control (max 1 per author in top-5, min distance 3)

Rather than extract Strategy pattern traits (added complexity),
we simply consolidated to single, clean implementation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -235,9 +235,10 @@ services:
     networks:
       - nova-network
     healthcheck:
-      test: ["CMD", "/app/user-service", "healthcheck"]
+      test: ["CMD-SHELL", "curl -fsS http://localhost:8080/api/v1/health >/dev/null || exit 1"]
       interval: 30s
       timeout: 5s
+      start_period: 20s
       retries: 3
 
 # ============================================
