--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -40,6 +40,7 @@ FROM debian:bookworm-slim AS runtime
 RUN apt-get update && apt-get install -y \
     ca-certificates \
     libssl3 \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Create app user (same UID as builder)
