refactor(backend): eliminate video service placeholders - Priority 2b
Removed two unimplemented NotYetImplemented placeholder modules that provided no value:
- src/services/video_transcoding.rs (64 lines) - all methods returned NotYetImplemented
- src/services/video_service.rs (54 lines) - all methods returned NotYetImplemented

Updated dependent code to remove references:
- services/mod.rs: Removed module exports and documentation
- handlers/videos.rs: Removed VideoService dependency, simplified implementations

Code reduction: 118 lines of dead code eliminated
Result: Cleaner codebase with no functional loss (these services never worked)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@
 # ============================================
 # NOTE: Compiles optimized feed ranking engine with unified ClickHouse queries
 # and simplified CDC offset management (Kafka auto-commit)
-FROM rustlang/rust:nightly-slim as builder
+FROM rust:slim as builder
 
 # Install build dependencies
 RUN apt-get update && apt-get install -y \
