feat(streaming): add WebSocket real-time viewer updates handler
## Overview
Implemented critical WebSocket support for real-time streaming metrics.
This unblocks P1 viewer story by enabling live viewer count updates.

## Changes

### 1. New WebSocket Handler Module
- Created `backend/user-service/src/handlers/streaming_websocket.rs` (~260 lines)
  - StreamingHub actor for connection management
  - StreamingWebSocket actor for per-connection handling
  - WebSocket upgrade handler: GET /api/v1/streams/{stream_id}/ws
  - Helper functions for broadcasting updates

### 2. Broadcast Message Protocol
All messages use JSON format with event types:
- `viewer_count_changed` - When viewer count updates
- `stream_started` - When broadcast begins
- `stream_ended` - When broadcast concludes
- `quality_changed` - When bitrate adaptation occurs

### 3. Architecture
- Hub-spoke pattern: Central StreamingHub broadcasts to all connected clients
- Session tracking: Each connection gets unique ID in hub
- Stateless: Hub uses in-memory map, survives restarts via reconnect
- Non-blocking: Uses actix async actors, no database blocking

### 4. Integration Points
- Added StreamingHub to app state in main.rs
- Registered WebSocket route: GET /api/v1/streams/{stream_id}/ws
- Helper functions exported for services to trigger broadcasts:
  - notify_viewer_count_changed()
  - notify_stream_started()
  - notify_stream_ended()

### 5. Dependencies Added
- actix 0.13 (actor framework)
- actix-web-actors 4.3 (WebSocket support)

## Alignment with Spec
Resolves critical gap identified in CODE_ALIGNMENT.md:
- ✅ WebSocket real-time hub (T050-T052)
- ✅ Enables live viewer count updates (P1 requirement)
- ✅ Enables stream status notifications

## Testing Notes
- Unit tests for message serialization included
- Integration tests will be added in next phase
- Requires Redis connection manager in app state (already present)

## Next Steps (Phase 2)
1. Add integration tests with mock RTMP client
2. Implement P

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,7 +13,9 @@ rust-version = "1.75"
 
 [workspace.dependencies]
 # Web framework
+actix = "0.13"
 actix-web = "4.5"
+actix-web-actors = "4.2"
 actix-rt = "2.9"
 actix-cors = "0.7"
 
