--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ rust-version = "1.75"
 
 [workspace.dependencies]
 # Web framework
+actix = "0.13"
 actix-web = "4.5"
+actix-web-actors = "4.3"
 actix-rt = "2.9"
 actix-cors = "0.7"
 
